@@ -33,7 +33,7 @@
             {% endif %}
 
           </div>
-          <p class="card-bio">BIO HERE</p>
+          <p class="card-bio">{{ follower.bio }}</p>
         </div>
       </div>
     </div>
