@@ -37,7 +37,7 @@
             {% endif %}
 
           </div>
-          <p class="card-bio">BIO HERE</p>
+          <p class="card-bio">{{ followed_user.bio }}</p>
         </div>
       </div>
     </div>
