@@ -46,7 +46,7 @@
               {% endif %}
 
             </div>
-            <p class="card-bio">BIO HERE</p>
+            <p class="card-bio">{{ user.bio }}</p>
           </div>
         </div>
       </div>
