@@ -37,4 +37,14 @@ app.py 267-269: Added message delete loop prior to user deletion due to relation
 users/detail.html 4-16, 95, 98: Added header image to html to render and refereneced user.header_image_url, showed user bio and location referencing user
 
 
+app.py 242: authenticated user for profile edits and pre-filled edit-fields
+
+followers, following.html: added bio information to users, followers, and following pages
+
+forms.py 50: added new form model for editing user.
+
+
+
+
+
 
